Verify OTP and generate token temp
