# internal/routers/user/user.router.go
@@ -16,6 +16,7 @@ func (ur *UserRouter) InitUserRouter(router *gin.RouterGroup) {
 	{
 		// userRouterPublic.POST("/register", userController.Register)
 		userRouterPublic.POST("/register", account.Login.Register)
+		userRouterPublic.POST("/verify_account", account.Login.VerifyOTP)
 		userRouterPublic.POST("/login", account.Login.Login)
 	}
 
